# agentops

./: .dockerignore  .env.example  .gitignore  AgentOps_Project_Guide.md  Dockerfile  LEARNING_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: data_drift.json  model_performance.json
monitoring/grafana/provisioning/: dashboards.yml
scripts/: demo.py  initial_train.py  seed_data.py  simulate_drift.py
src/: config.py
src/agents/: data_quality_agent.py  deployment_agent.py  model_eval_agent.py  orchestrator.py  retraining_agent.py  state.py
src/api/: app.py
src/api/middleware/: logging.py  prediction_logger.py
src/api/routes/: agents.py  health.py  metrics.py  predict.py
src/mcp/: server.py
src/ml/: data_processor.py  evaluate.py  model.py  predict.py  train.py
src/monitoring/: drift_detector.py  metrics_exporter.py  performance_tracker.py
src/storage/: database.py  model_registry.py  s3_client.py
src/utils/: logger.py
tests/test_agents/: test_data_quality.py  test_deployment.py  test_model_eval.py  test_orchestrator.py  test_retraining.py
tests/test_api/: test_health.py  test_predict_endpoint.py
tests/test_ml/: test_model.py  test_predict.py  test_train.py
tests/test_monitoring/: test_drift_detector.py  test_performance_tracker.py
